# maturak-tickets

./: .gitignore  Cargo.toml  message.html
.github/workflows/: rust.yml
database-server/: Cargo.toml  build.rs
database-server/src/: broadcaster.rs  listener.rs  main.rs
shared/: Cargo.toml
shared/src/: database.rs  hook.rs  lib.rs
src/: alert_hook.rs  bankapi.rs  database.rs  hook.rs  kbapi.rs  mail.rs  main.rs  qrcodes.rs
ticket-bot/: Cargo.toml
ticket-bot/src/: bankapi.rs  main.rs  qrcodes.rs
