[package]
name = "ticket-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.5"
mail-send = { version = "0.5", features = ["builder"] }
once_cell = "1.21.1"
openssl = { version = "0.10", features = ["vendored"] }
qrcode = "0.14.1"
photon-rs = { git = "https://github.com/Jenyyk/photon.git", branch = "text-resize" }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
rustls = "0.23.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
rayon = "1.10.0"
rand = "0.9.0"
