[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenv = "0.15.0"
futures = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
